# bw-tracker

./: .gitignore  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_SPEC.md  DIET_PLANNER_BRAINSTORM.md  FEATURE_BRAINSTORM_SYNTHESIS.md  FIXES.md  README.md  REFACTOR_TASKS.md  REQUIREMENTS.md  ROADMAP.md  UI_INTERACTION_SCHEMA.md  UX_IMPROV.md  WORKOUT_APP_WIP.md  WORKOUT_PLANNER_BRAINSTORM.md  dashboard_blueprint.md  deployment-review.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  settings.json
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/lib/: supabase_client.py
backend/app/lib/domain/: __init__.py
backend/app/routers/: ai.py  auth.py  diet.py  goals.py  health.py  invitations.py  knowledge.py
backend/app/schemas/: ai.py  auth.py  diet.py  goals.py
backend/app/services/: ai_generation.py  knowledge_ingestion.py
backend/app/services/graph_rag/: __init__.py  context_builder.py  graph.py  nodes.py  prompts.py  retrieval.py  schemas.py  state.py
backend/app/workout/: mock_data.py  router.py  schemas.py
backend/bw_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/supabase/: graph_rag_migration.sql
backend/tests/: test_ai_endpoints.py
docs/: README.md  architecture.md  landing-page-design-manifesto.md  overview.md
src/: App.tsx  index.css  main.tsx
supabase/: clear_data.sql  daily_logs_mock_31d.csv  profiles.sql  (+5 more)
(+301 files in other folders)
